# ray_tracing

./: Cargo.toml  README.md
public/: out.ppm
src/: main.rs
src/lib/: canvas.rs  mod.rs  ray.rs  vec3.rs
src/lib/canvas/: mod.rs
