[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Dmarcano <dmarcan1@swarthmore.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
image = "0.23"
winit = "0.24"
winit_input_helper = "0.9"
pixels = "0.2.0"